// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tag overview 0 snapshot 1`] = `
<DocumentFragment>
  .emotion-0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  display: inline-block;
  padding-left: 4px;
  padding-right: 4px;
  border-radius: 5px;
  white-space: nowrap;
  background-color: rgba(70,74,72,0.15);
  border: 2px solid #464a48;
}

.emotion-1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
}

<span
    class="emotion-0"
  >
    <span
      class="emotion-1"
    >
      some text
    </span>
  </span>
</DocumentFragment>
`;

exports[`Tag overview 1 snapshot 1`] = `
<DocumentFragment>
  .emotion-0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  display: inline-block;
  padding-left: 4px;
  padding-right: 4px;
  border-radius: 5px;
  white-space: nowrap;
  background-color: rgba(126,38,45,0.15);
  border: 2px solid #7e262d;
}

.emotion-1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
}

<span
    class="emotion-0"
  >
    <span
      class="emotion-1"
    >
      some text
    </span>
  </span>
</DocumentFragment>
`;

exports[`Tag overview 2 snapshot 1`] = `
<DocumentFragment>
  .emotion-0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  display: inline-block;
  padding-left: 4px;
  padding-right: 4px;
  border-radius: 5px;
  white-space: nowrap;
  background-color: rgba(121,109,38,0.15);
  border: 2px solid #796d26;
}

.emotion-1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
}

<span
    class="emotion-0"
  >
    <span
      class="emotion-1"
    >
      some text
    </span>
  </span>
</DocumentFragment>
`;

exports[`Tag overview 3 snapshot 1`] = `
<DocumentFragment>
  .emotion-0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  display: inline-block;
  padding-left: 4px;
  padding-right: 4px;
  border-radius: 5px;
  white-space: nowrap;
  background-color: rgba(74,69,41,0.15);
  border: 2px solid #4a4529;
}

.emotion-1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
}

<span
    class="emotion-0"
  >
    <span
      class="emotion-1"
    >
      some text
    </span>
  </span>
</DocumentFragment>
`;

exports[`Tag overview 4 snapshot 1`] = `
<DocumentFragment>
  .emotion-0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  display: inline-block;
  padding-left: 4px;
  padding-right: 4px;
  border-radius: 5px;
  white-space: nowrap;
  background-color: rgba(94,103,86,0.15);
  border: 2px solid #5e6756;
}

.emotion-1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
}

<span
    class="emotion-0"
  >
    <span
      class="emotion-1"
    >
      some text
    </span>
  </span>
</DocumentFragment>
`;

exports[`Tag twilwindArrayColors snapshot 1`] = `
<DocumentFragment>
  .emotion-0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  display: inline-block;
  padding-left: 0.25rem;
  padding-right: 0.25rem;
  border-radius: 5px;
  white-space: nowrap;
  background-color: rgba(255,255,255,0.15);
  border: 2px solid white;
}

.emotion-1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
}

<span
    class="emotion-0"
  >
    <span
      class="emotion-1"
    >
      some text
    </span>
  </span>
</DocumentFragment>
`;
